// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Translate renders with auto-translate disabled 1`] = `
<DocumentFragment>
  <form
    action="http://update-url"
    class="translation-edit"
    method="POST"
    name="translate_fm"
  >
    <input
      name="_mock_TranslationPortlet_workflowAction"
      type="hidden"
      value="1"
    />
    <input
      name="_mock_TranslationPortlet_redirect"
      type="hidden"
      value="http://redirect-url"
    />
    <input
      name="_mock_TranslationPortlet_sourceLanguageId"
      type="hidden"
      value="en_US"
    />
    <input
      name="_mock_TranslationPortlet_targetLanguageId"
      type="hidden"
      value="es_ES"
    />
    <nav
      class="component-tbar subnav-tbar-light tbar"
    >
      <div
        class="container-fluid container-view container-fluid-max-xl"
      >
        <ul
          class="tbar-nav"
        >
          <li
            class="tbar-item tbar-item-expand"
          >
            <div
              class="languages-selector autofit-row autofit-row-center"
            >
              <div
                class="autofit-col"
              >
                translate-from
              </div>
              <div
                class="autofit-col"
              >
                <div
                  class="dropdown"
                >
                  <button
                    class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
                    style=""
                    type="button"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-en-us"
                        role="presentation"
                      >
                        <use
                          xlink:href="#en-us"
                        />
                      </svg>
                    </span>
                    <span
                      class="btn-section"
                    >
                      en-US
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="autofit-col"
              >
                to
              </div>
              <div
                class="autofit-col"
              >
                <div
                  class="dropdown"
                >
                  <button
                    class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
                    style=""
                    type="button"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-es-es"
                        role="presentation"
                      >
                        <use
                          xlink:href="#es-es"
                        />
                      </svg>
                    </span>
                    <span
                      class="btn-section"
                    >
                      es-ES
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
          <li
            class="tbar-item"
          >
            <div
              class="tbar-section text-right"
            >
              <div
                class="btn-group"
                role="group"
              >
                <div
                  class="btn-group-item"
                >
                  <a
                    class="btn btn-sm btn-secondary"
                    href="http://redirect-url"
                  >
                    cancel
                  </a>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-sm btn-secondary"
                    type="submit"
                  >
                    Save as Draft
                  </button>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-sm btn-primary"
                    type="submit"
                  >
                    Publish
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="container-fluid container-view container-fluid-max-xl"
    >
      <div
        class="sheet translation-edit-body-form"
      >
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <svg
              class="lexicon-icon lexicon-icon-en-us"
              role="presentation"
            >
              <use
                xlink:href="#en-us"
              />
            </svg>
            <span
              class="ml-2"
            >
              en-US
            </span>
            <div
              class="separator"
            />
          </div>
          <div
            class="col-md-6"
          >
            <svg
              class="lexicon-icon lexicon-icon-es-es"
              role="presentation"
            >
              <use
                xlink:href="#es-es"
              />
            </svg>
            <span
              class="ml-2"
            >
              es-ES
            </span>
            <div
              class="separator"
            />
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Basic Information
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Basic Information
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
              >
                Title
              </label>
              <input
                class="form-control"
                dir="ltr"
                readonly=""
                type="text"
                value="mock title"
              />
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="form-group"
            >
              <div
                class="row"
              >
                <div
                  class="autofit-col autofit-col-expand"
                >
                  <label
                    class="control-label"
                    for="_mock_TranslationPortlet_infoField--title--"
                  >
                    Title
                  </label>
                </div>
              </div>
              <input
                class="form-control"
                dir="ltr"
                id="_mock_TranslationPortlet_infoField--title--"
                name="_mock_TranslationPortlet_infoField--title--"
                type="text"
                value="mock title"
              />
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
              >
                Description
              </label>
              <div
                class="translation-editor-preview"
                dir="ltr"
              >
                <p>
                  mock summary
                </p>
              </div>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
              >
                Description
              </label>
              <div
                id="_mock_TranslationPortlet_infoField--description--Container"
              >
                <div
                  id="_mock_TranslationPortlet_infoField--description--"
                  name="_mock_TranslationPortlet_infoField--description--"
                />
              </div>
              <input
                name="_mock_TranslationPortlet_infoField--description--"
                type="hidden"
                value="<p>mock summary</p>"
              />
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Content (Basic Web Content)
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Content (Basic Web Content)
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
              >
                Content
              </label>
              <div
                class="translation-editor-preview"
                dir="ltr"
              >
                <p>
                  mock content
                </p>
              </div>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
              >
                Content
              </label>
              <div
                id="_mock_TranslationPortlet_infoField--content--Container"
              >
                <div
                  id="_mock_TranslationPortlet_infoField--content--"
                  name="_mock_TranslationPortlet_infoField--content--"
                />
              </div>
              <input
                name="_mock_TranslationPortlet_infoField--content--"
                type="hidden"
                value="<p>mock content</p"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Translate renders with auto-translate enabled 1`] = `
<DocumentFragment>
  <form
    action="http://update-url"
    class="translation-edit"
    method="POST"
    name="translate_fm"
  >
    <input
      name="_mock_TranslationPortlet_workflowAction"
      type="hidden"
      value="1"
    />
    <input
      name="_mock_TranslationPortlet_redirect"
      type="hidden"
      value="http://redirect-url"
    />
    <input
      name="_mock_TranslationPortlet_sourceLanguageId"
      type="hidden"
      value="en_US"
    />
    <input
      name="_mock_TranslationPortlet_targetLanguageId"
      type="hidden"
      value="es_ES"
    />
    <nav
      class="component-tbar subnav-tbar-light tbar"
    >
      <div
        class="container-fluid container-view container-fluid-max-xl"
      >
        <ul
          class="tbar-nav"
        >
          <li
            class="tbar-item"
          >
            <div
              class="languages-selector autofit-row autofit-row-center"
            >
              <div
                class="autofit-col"
              >
                translate-from
              </div>
              <div
                class="autofit-col"
              >
                <div
                  class="dropdown"
                >
                  <button
                    class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
                    style=""
                    type="button"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-en-us"
                        role="presentation"
                      >
                        <use
                          xlink:href="#en-us"
                        />
                      </svg>
                    </span>
                    <span
                      class="btn-section"
                    >
                      en-US
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="autofit-col"
              >
                to
              </div>
              <div
                class="autofit-col"
              >
                <div
                  class="dropdown"
                >
                  <button
                    class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
                    style=""
                    type="button"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-es-es"
                        role="presentation"
                      >
                        <use
                          xlink:href="#es-es"
                        />
                      </svg>
                    </span>
                    <span
                      class="btn-section"
                    >
                      es-ES
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
          <li
            class="tbar-item"
          >
            <button
              class="btn btn-sm btn-secondary"
              type="button"
            >
              auto-translate
            </button>
          </li>
          <li
            class="tbar-item tbar-item-expand text-left"
          />
          <li
            class="tbar-item"
          >
            <div
              class="tbar-section text-right"
            >
              <div
                class="btn-group"
                role="group"
              >
                <div
                  class="btn-group-item"
                >
                  <a
                    class="btn btn-sm btn-secondary"
                    href="http://redirect-url"
                  >
                    cancel
                  </a>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-sm btn-secondary"
                    type="submit"
                  >
                    Save as Draft
                  </button>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-sm btn-primary"
                    type="submit"
                  >
                    Publish
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="container-fluid container-view container-fluid-max-xl"
    >
      <div
        class="sheet translation-edit-body-form"
      >
        <div
          class="row row-autotranslate-title"
        >
          <div
            class="col-md-6"
          >
            <svg
              class="lexicon-icon lexicon-icon-en-us"
              role="presentation"
            >
              <use
                xlink:href="#en-us"
              />
            </svg>
            <span
              class="ml-2"
            >
              en-US
            </span>
            <div
              class="separator"
            />
          </div>
          <div
            class="col-md-6"
          >
            <svg
              class="lexicon-icon lexicon-icon-es-es"
              role="presentation"
            >
              <use
                xlink:href="#es-es"
              />
            </svg>
            <span
              class="ml-2"
            >
              es-ES
            </span>
            <div
              class="separator"
            />
          </div>
        </div>
        <div
          class="row row-autotranslate-title"
        >
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Basic Information
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Basic Information
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-autotranslate-content autofit-col autofit-col-expand"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Title
                  </label>
                  <input
                    class="form-control"
                    dir="ltr"
                    readonly=""
                    type="text"
                    value="mock title"
                  />
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="autofit-col autofit-col-expand"
                    >
                      <label
                        class="control-label"
                        for="_mock_TranslationPortlet_infoField--title--"
                      >
                        Title
                      </label>
                    </div>
                  </div>
                  <input
                    class="form-control"
                    dir="ltr"
                    id="_mock_TranslationPortlet_infoField--title--"
                    name="_mock_TranslationPortlet_infoField--title--"
                    type="text"
                    value="mock title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="align-self-top col-autotranslate-button autofit-col"
          >
            <button
              class="btn btn-monospaced btn-secondary"
              title="auto-translate-x-field-Title"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-automatic-translate"
                role="presentation"
              >
                <use
                  xlink:href="#automatic-translate"
                />
              </svg>
              <span
                class="sr-only"
              >
                auto-translate-x-field-Title
              </span>
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-autotranslate-content autofit-col autofit-col-expand"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Description
                  </label>
                  <div
                    class="translation-editor-preview"
                    dir="ltr"
                  >
                    <p>
                      mock summary
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Description
                  </label>
                  <div
                    id="_mock_TranslationPortlet_infoField--description--Container"
                  >
                    <div
                      id="_mock_TranslationPortlet_infoField--description--"
                      name="_mock_TranslationPortlet_infoField--description--"
                    />
                  </div>
                  <input
                    name="_mock_TranslationPortlet_infoField--description--"
                    type="hidden"
                    value="<p>mock summary</p>"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="align-self-top col-autotranslate-button autofit-col"
          >
            <button
              class="btn btn-monospaced btn-secondary"
              title="auto-translate-x-field-Description"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-automatic-translate"
                role="presentation"
              >
                <use
                  xlink:href="#automatic-translate"
                />
              </svg>
              <span
                class="sr-only"
              >
                auto-translate-x-field-Description
              </span>
            </button>
          </div>
        </div>
        <div
          class="row row-autotranslate-title"
        >
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Content (Basic Web Content)
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Content (Basic Web Content)
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-autotranslate-content autofit-col autofit-col-expand"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Content
                  </label>
                  <div
                    class="translation-editor-preview"
                    dir="ltr"
                  >
                    <p>
                      mock content
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Content
                  </label>
                  <div
                    id="_mock_TranslationPortlet_infoField--content--Container"
                  >
                    <div
                      id="_mock_TranslationPortlet_infoField--content--"
                      name="_mock_TranslationPortlet_infoField--content--"
                    />
                  </div>
                  <input
                    name="_mock_TranslationPortlet_infoField--content--"
                    type="hidden"
                    value="<p>mock content</p"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="align-self-top col-autotranslate-button autofit-col"
          >
            <button
              class="btn btn-monospaced btn-secondary"
              title="auto-translate-x-field-Content"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-automatic-translate"
                role="presentation"
              >
                <use
                  xlink:href="#automatic-translate"
                />
              </svg>
              <span
                class="sr-only"
              >
                auto-translate-x-field-Content
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Translate renders with experiences selector 1`] = `
<DocumentFragment>
  <form
    action="http://update-url"
    class="translation-edit"
    method="POST"
    name="translate_fm"
  >
    <input
      name="_mock_TranslationPortlet_workflowAction"
      type="hidden"
      value="1"
    />
    <input
      name="_mock_TranslationPortlet_redirect"
      type="hidden"
      value="http://redirect-url"
    />
    <input
      name="_mock_TranslationPortlet_sourceLanguageId"
      type="hidden"
      value="en_US"
    />
    <input
      name="_mock_TranslationPortlet_targetLanguageId"
      type="hidden"
      value="es_ES"
    />
    <nav
      class="component-tbar subnav-tbar-light tbar"
    >
      <div
        class="container-fluid container-view container-fluid-max-xl"
      >
        <ul
          class="tbar-nav"
        >
          <li
            class="tbar-item"
          >
            <div
              class="autofit-row autofit-row-center"
            >
              <div
                class="autofit-col"
              >
                <label
                  class="mr-2"
                  for="experience-selector"
                >
                  Experience
                </label>
              </div>
              <div
                class="autofit-col"
              >
                <select
                  class="form-control"
                  id="experience-selector"
                >
                  <option
                    value="0"
                  >
                    Default
                  </option>
                  <option
                    value="1"
                  >
                    Experience 1
                  </option>
                </select>
              </div>
            </div>
          </li>
          <li
            class="tbar-item"
          >
            <div
              class="languages-selector autofit-row autofit-row-center"
            >
              <div
                class="autofit-col"
              >
                translate-from
              </div>
              <div
                class="autofit-col"
              >
                <div
                  class="dropdown"
                >
                  <button
                    class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
                    style=""
                    type="button"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-en-us"
                        role="presentation"
                      >
                        <use
                          xlink:href="#en-us"
                        />
                      </svg>
                    </span>
                    <span
                      class="btn-section"
                    >
                      en-US
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="autofit-col"
              >
                to
              </div>
              <div
                class="autofit-col"
              >
                <div
                  class="dropdown"
                >
                  <button
                    class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
                    style=""
                    type="button"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-es-es"
                        role="presentation"
                      >
                        <use
                          xlink:href="#es-es"
                        />
                      </svg>
                    </span>
                    <span
                      class="btn-section"
                    >
                      es-ES
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
          <li
            class="tbar-item"
          >
            <button
              class="btn btn-sm btn-secondary"
              type="button"
            >
              auto-translate
            </button>
          </li>
          <li
            class="tbar-item tbar-item-expand text-left"
          />
          <li
            class="tbar-item"
          >
            <div
              class="tbar-section text-right"
            >
              <div
                class="btn-group"
                role="group"
              >
                <div
                  class="btn-group-item"
                >
                  <a
                    class="btn btn-sm btn-secondary"
                    href="http://redirect-url"
                  >
                    cancel
                  </a>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-sm btn-secondary"
                    type="submit"
                  >
                    Save as Draft
                  </button>
                </div>
                <div
                  class="btn-group-item"
                >
                  <button
                    class="btn btn-sm btn-primary"
                    type="submit"
                  >
                    Publish
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="container-fluid container-view container-fluid-max-xl"
    >
      <div
        class="sheet translation-edit-body-form"
      >
        <div
          class="row row-autotranslate-title"
        >
          <div
            class="col-md-6"
          >
            <svg
              class="lexicon-icon lexicon-icon-en-us"
              role="presentation"
            >
              <use
                xlink:href="#en-us"
              />
            </svg>
            <span
              class="ml-2"
            >
              en-US
            </span>
            <div
              class="separator"
            />
          </div>
          <div
            class="col-md-6"
          >
            <svg
              class="lexicon-icon lexicon-icon-es-es"
              role="presentation"
            >
              <use
                xlink:href="#es-es"
              />
            </svg>
            <span
              class="ml-2"
            >
              es-ES
            </span>
            <div
              class="separator"
            />
          </div>
        </div>
        <div
          class="row row-autotranslate-title"
        >
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Basic Information
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Basic Information
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-autotranslate-content autofit-col autofit-col-expand"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Title
                  </label>
                  <input
                    class="form-control"
                    dir="ltr"
                    readonly=""
                    type="text"
                    value="mock title"
                  />
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="autofit-col autofit-col-expand"
                    >
                      <label
                        class="control-label"
                        for="_mock_TranslationPortlet_infoField--title--"
                      >
                        Title
                      </label>
                    </div>
                  </div>
                  <input
                    class="form-control"
                    dir="ltr"
                    id="_mock_TranslationPortlet_infoField--title--"
                    name="_mock_TranslationPortlet_infoField--title--"
                    type="text"
                    value="mock title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="align-self-top col-autotranslate-button autofit-col"
          >
            <button
              class="btn btn-monospaced btn-secondary"
              title="auto-translate-x-field-Title"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-automatic-translate"
                role="presentation"
              >
                <use
                  xlink:href="#automatic-translate"
                />
              </svg>
              <span
                class="sr-only"
              >
                auto-translate-x-field-Title
              </span>
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-autotranslate-content autofit-col autofit-col-expand"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Description
                  </label>
                  <div
                    class="translation-editor-preview"
                    dir="ltr"
                  >
                    <p>
                      mock summary
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Description
                  </label>
                  <div
                    id="_mock_TranslationPortlet_infoField--description--Container"
                  >
                    <div
                      id="_mock_TranslationPortlet_infoField--description--"
                      name="_mock_TranslationPortlet_infoField--description--"
                    />
                  </div>
                  <input
                    name="_mock_TranslationPortlet_infoField--description--"
                    type="hidden"
                    value="<p>mock summary</p>"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="align-self-top col-autotranslate-button autofit-col"
          >
            <button
              class="btn btn-monospaced btn-secondary"
              title="auto-translate-x-field-Description"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-automatic-translate"
                role="presentation"
              >
                <use
                  xlink:href="#automatic-translate"
                />
              </svg>
              <span
                class="sr-only"
              >
                auto-translate-x-field-Description
              </span>
            </button>
          </div>
        </div>
        <div
          class="row row-autotranslate-title"
        >
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Content (Basic Web Content)
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class="fieldset-title"
            >
              Content (Basic Web Content)
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-autotranslate-content autofit-col autofit-col-expand"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Content
                  </label>
                  <div
                    class="translation-editor-preview"
                    dir="ltr"
                  >
                    <p>
                      mock content
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <label
                    class="control-label"
                  >
                    Content
                  </label>
                  <div
                    id="_mock_TranslationPortlet_infoField--content--Container"
                  >
                    <div
                      id="_mock_TranslationPortlet_infoField--content--"
                      name="_mock_TranslationPortlet_infoField--content--"
                    />
                  </div>
                  <input
                    name="_mock_TranslationPortlet_infoField--content--"
                    type="hidden"
                    value="<p>mock content</p"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="align-self-top col-autotranslate-button autofit-col"
          >
            <button
              class="btn btn-monospaced btn-secondary"
              title="auto-translate-x-field-Content"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-automatic-translate"
                role="presentation"
              >
                <use
                  xlink:href="#automatic-translate"
                />
              </svg>
              <span
                class="sr-only"
              >
                auto-translate-x-field-Content
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
